<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kogelvangers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">dit is een test</string>
    <string name="Button">Button</string>

    <color name="white">#FFFFFF</color>
    <color name="groen_donker">#2e8b57</color>
    <color name="groen_licht">#3cb371</color>

    <string name="contact">Contact</string>
    <string name="programma">Programma</string>
    <string name="name_club">v.v. Kogelvangers</string>
    <string name="adres_club">Grintweg 2</string>
    <string name="postcode_club">4797 SZ</string>
    <string name="stad_club">Willemstad</string>
    <string name="telNum_club">Tel: (0168) 47 34 40</string>
    <string name="alg_gegevens">Algemene gegevens</string>

    <color name="black">#000000</color>
    <color name="trans">#80000000</color>

    <string name="news">Laatste nieuws</string>
    <string name="kogelvangers">Kogelvangers</string>
    <string name="webmaster_gegevens">		Klaas Haag \n0168 – 472286 / 0618345357 \nwebmaster@vvkogelvangers.nl</string>
    <string name="voorzitter_gegevens">		John Pijper \n0168 - 47 34 40 \nvoorzitter@vvkogelvangers.nl</string>
    <string name="secretaris_gegevens">		Johan Versluys \n0168 - 47 34 40 \nsecretaris@vvkogelvangers.nl</string>
    <string name="wedstrijd_secretaris_gegevens">		Piet Bolle \n0168 - 47 34 40\npiet-tamara@ziggo.nl</string>
    <string name="jeugd_secretaris_gegevens">		Monique van Laarhoven \n0168-473610 \ng.van.laarhoven@ziggo.nl</string>
    <string name="toernooien_gegevens">		Piet Bolle \n0168 - 47 34 40\npiet-tamara@ziggo.nl</string>
    <string name="teams">Teams</string>

    <string-array name="Teams">
        <item>Kogelvangers 1</item>
        <item>Kogelvangers 2</item>
        <item>Kogelvangers 3</item>
        <item>Kogelvangers 4</item>
    </string-array>

    <string name="voorzitter">Voorzitter</string>
    <string name="webmaster">Webmaster</string>
    <string name="secretaris">Secretaris</string>
    <string name="wedstrijd_secretaris">Wedstrijd secretaris</string>
    <string name="jeugd_secretaris">Jeugd secretaris</string>
    <string name="toernooien">Toernooien</string>

</resources>