<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gras_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <ScrollView
        android:id="@+id/ScrollView02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollingCache="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/groen_donker"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alg_gegevens"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/groen_licht"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/textView_name_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_club"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_adres_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adres_club"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_postcode_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postcode_club"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_stad_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stad_club"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_telNum_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telNum_club"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/groen_donker"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/groen_licht"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/textView_webmaster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/webmaster"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_webmaster1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/webmaster_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_voorzitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/voorzitter"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_voorzitter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/voorzitter_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_secretaris"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/secretaris"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_secretaris1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/secretaris_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_wedstrijd_secretaris"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/wedstrijd_secretaris"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_wedstrijd_secretaris1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/wedstrijd_secretaris_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_jeugd_secretaris"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/jeugd_secretaris"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_jeugd_secretaris1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/jeugd_secretaris_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_toernooien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/toernooien"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_toernooien1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/toernooien_gegevens"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>