<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gras_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DD" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/kogelvangers"
        android:src="@drawable/kogelvangers" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_news"
                android:text="@string/news"
                android:textAlignment="center"
                android:textAppearance="@style/ButtonTextTheme" />

            <Button
                android:id="@+id/buttonProgramma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_wed"
                android:text="@string/programma"
                android:textAlignment="center"
                android:textAppearance="@style/ButtonTextTheme" />

            <Button
                android:id="@+id/buttonContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_contact"
                android:text="@string/contact"
                android:textAlignment="center"
                android:textAppearance="@style/ButtonTextTheme" />

            <Button
                android:id="@+id/buttonTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_teams"
                android:text="@string/teams"
                android:textAlignment="center"
                android:textAppearance="@style/ButtonTextTheme" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>